fix footer alignment

--- a/stylesheets/compact.less
+++ b/stylesheets/compact.less
@@ -29,8 +29,12 @@
   }
 
   .status-bar {
-    height: @tab-height / @modular-scale;
-    line-height: @tab-height / @modular-scale;
+    &,
+    .status-bar-right,
+    .inline-block {
+      height: @tab-height / @modular-scale;
+      line-height: @tab-height / @modular-scale;
+      vertical-align: top;
+    }
   }
-
 }
